--- a/index.html
+++ b/index.html
@@ -190,9 +190,9 @@
 
           <h3>🎯 Tracking Details</h3>
           <p><strong>Marijuana Types:</strong> Flower, Tincture, Day Gummy, Night Gummy, Oil</p>
-          <p><strong>Marijuana Amounts:</strong> 5, 10, 15, 20 mg</p>
+          <p><strong>Marijuana Amounts:</strong>from 5 mg thru 50 mg by 5</p>
           <p><strong>Nicotine Types:</strong> Gum, Lozenge, Pouch</p>
-          <p><strong>Nicotine Amounts:</strong> 2, 3, 4, 5, 6 mg</p>
+          <p><strong>Nicotine Amounts:</strong>1 mg thru 10 mg by 1</p>
 
           <h3>💡 Tips</h3>
           <ul>
