--- a/index.html
+++ b/index.html
@@ -24,15 +24,15 @@
       </div>
 
       <div class="tabs">
-        <button class="tab" data-tab="0">Marijuana</button>
+        <button class="tab active" data-tab="0">Marijuana</button>
         <button class="tab" data-tab="1">Nicotine</button>
         <button class="tab" data-tab="2">MJ Chart</button>
         <button class="tab" data-tab="3">Nic Chart</button>
-        <button class="tab active" data-tab="4">About</button>
+        <button class="tab" data-tab="4">About</button>
       </div>
 
       <!-- Marijuana Entry Tab -->
-      <div class="tab-content">
+      <div class="tab-content active">
         <div class="daily-total">
           <h3>Today's Total</h3>
           <div class="amount" id="mj-total">0</div>
@@ -148,7 +148,7 @@
       </div>
 
       <!-- About Tab -->
-      <div class="tab-content active">
+      <div class="tab-content">
         <div class="about-content">
           <h3>🐧 About Penguin Meds</h3>
           <p>Penguin Meds is a progressive web app designed to help you track your marijuana and nicotine medicines in a simple, private, and secure way.</p>
