--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
         <div class="daily-total">
 	  
-          <h3>Day's Total</h3>
+          <h3>Marijuana Total</h3>
           <div class="amount" id="mj-total">0</div>
           <div class="unit">mg</div>
         </div>
@@ -98,7 +98,7 @@
         </div>
 
         <div class="daily-total">
-          <h3>Total</h3>
+          <h3>Nicotine Total</h3>
           <div class="amount" id="nic-total">0</div>
           <div class="unit">mg</div>
         </div>
